# vits2

./: .gitignore  Pipfile  env.py  inference.py  inference_ms.py  preprocess.py  pyproject.toml  readme.md  requirements.txt  train.py  train_ms.py
model/: decoder.py  encoders.py  modules.py  transformer.py
monotonic_align/: __init__.py  setup.py
text/: __init__.py  cleaners.py  normalize_numbers.py  symbols.py
utils/: hparams.py  mel_processing.py
vits2/: attentions.py  commons.py  data_utils.py  losses.py  mel_processing.py  models.py  modules.py  transforms.py  utils.py
vits2/bs_roformer/: __init__.py  attend.py  bs_roformer.py  download.py  mel_band_rofomer.py
vits2/text/: __init__.py  cleaners.py  korean.py  numbers.py  symbols.py
