[tool.poetry]
name = "vits2"
version = "0.1.0"
description = ""
authors = ["luhavis <luhavis.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
tqdm = "^4.66.4"
tensorboard = "^2.16.2"
tensorboardx = "^2.6.2.2"
phonemizer = "^3.2.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
numba = "^0.59.1"
matplotlib = "^3.8.4"
inflect = "^7.2.1"
torch = {version = "^2.3.0+cu121", source = "torch-cu121"}
torchvision = {version = "^0.18.0+cu121", source = "torch-cu121"}
torchaudio = {version = "^2.3.0+cu121", source = "torch-cu121"}
scipy = "^1.13.0"
librosa = "^0.10.2"
unidecode = "^1.3.8"
ko-pron = "^1.3"
jamo = "^0.4.1"
g2pk2 = "^0.0.3"
loguru = "^0.7.2"


[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
